Added content structure

--- a/index.html
+++ b/index.html
@@ -5,13 +5,26 @@
   <head>
 
     <title>BBQ Splash Page</title>
-    
+
     <link href="css/styles.css" rel="stylesheet">
   
   </head>
 
   <body>
-  
+
+    <div class="info">
+      <h1></h1>
+      <p></p>
+      <p class="top-text"></p>
+    </div>
+
+    <div class="main-content">
+      <h2></h2>
+      <p></p>
+      <p></p>
+      <p class="fine-print"></p>
+    </div>
+
   </body>
 
 </html>
