--- a/index.html
+++ b/index.html
@@ -6,23 +6,28 @@
 
     <title>BBQ Splash Page</title>
 
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,900&display=swap" 
+    rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
   
   </head>
 
   <body>
 
-    <div class="info">
-      <h1></h1>
-      <p></p>
-      <p class="top-text"></p>
+    <div class="intro">
+      <h1>Learn how to make <strong>the best BBQ ribs</strong> in town</h1>
+      <p>Join us for this live webinar</p>
+      <p class="top-text">Mouthwatering deliciuos</p>
     </div>
 
     <div class="main-content">
-      <h2></h2>
-      <p></p>
-      <p></p>
-      <p class="fine-print"></p>
+      <h2>Become a BBQ master!</h2>
+      <p>Register Today</p>
+      <p>BBQ isn't just standing in front of your grill with it on full blast and hoping for the best. 
+      It's an art! One way to speed up the process is to learn from the best. You can do just that by
+    signing up for this webinar!</p>
+
+      <p class="fine-print">We'll never share your information without your permission</p>
     </div>
 
   </body>
