--- a/index.html
+++ b/index.html
@@ -25,9 +25,15 @@
       <p>Register Today</p>
       <p>BBQ isn't just standing in front of your grill with it on full blast and hoping for the best. 
       It's an art! One way to speed up the process is to learn from the best. You can do just that by
-    signing up for this webinar!</p>
+      signing up for this webinar!</p>
 
-      <p class="fine-print">We'll never share your information without your permission</p>
+      <form>
+        <input type="text" required placeholder="First Name">
+        <input type="email" required placeholder="Email">
+        <button class="btn btn-primary" type="submit">Register</button>
+      </form>
+
+      <p class="fine-print">We'll never share your information without your permission</p>  
     </div>
 
   </body>
