Styled form and put finishing touches on style

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       It's an art! One way to speed up the process is to learn from the best. You can do just that by
       signing up for this webinar!</p>
 
-      <form>
+      <form class="email-collector" action="#" method="POST">
         <input type="text" required placeholder="First Name">
         <input type="email" required placeholder="Email">
         <button class="btn btn-primary" type="submit">Register</button>
